# src/controllers/UserController.ts
@@ -1,36 +1,39 @@
-import {Request, Response, Router} from "express";
-import {User} from "../models/User";
-import {UserService} from "../services/user/UserService";
-import {ObjectId} from "bson";
-import HTTPError from "../models/exceptions/HTTPError";
-import {adminRoleGuardian} from "../middleware/adminRoleGuardian";
+/**
+ * @module User
+ */
 
+import { Request, Response, Router } from "express";
+import { User } from "../models/User";
+import { UserService } from "../services/UserService";
+import { ObjectId } from "bson";
+import HTTPError from "../models/exceptions/HTTPError";
+import { adminGuardian } from "../middleware/adminGuardian";
+
+/**
+ * Instance of the Express Router
+ */
 const router: Router = Router();
 
 /**
- * Route GET /user/me
+ * Route GET /users/me
  */
-router.get("/me",  (req: Request, res: Response): void => {
-    const user: User = Object.assign({}, req.user); // Copy user object
-    delete user.password; // Remove password
-
+router.get("/me", (req: Request, res: Response): void => {
     res.status(200)
-    .send(user);
+    .send(req.user);
 });
 
 /**
- * Route GET /user/:id
+ * Route GET /users/:id
  */
-router.get('/:id', adminRoleGuardian, (req: Request, res: Response): void => {
-    let id: string = req.params.id;
+router.get("/:id", adminGuardian, (req: Request, res: Response): void => {
+    const id: string = req.params.id;
 
     if (!ObjectId.isValid(id)) {
         res.status(400)
         .send({ error: "The user id provided is not a valid BSON id." });
     }
 
-
-    UserService.getUserById(ObjectId.createFromHexString(id))
+    UserService.getUser(ObjectId.createFromHexString(id))
     .then((result: User) => {
         res.status(200)
         .send(result);
@@ -39,10 +42,25 @@ router.get('/:id', adminRoleGuardian, (req: Request, res: Response): void => {
         res.status(e.statusCode)
         .header(e.headers)
         .send(e.body)
-    })
+    });
 
 });
 
+/**
+ * Route GET /users/
+ */
+router.get("/", adminGuardian, (req: Request, res: Response): void => {
+    UserService.getUsers()
+    .then((result: Array<User>) => {
+        res.status(200)
+        .send(result);
+    })
+    .catch((e: HTTPError) => {
+        res.status(e.statusCode)
+        .header(e.headers)
+        .send(e.body)
+    });
 
+});
 
 export const UserController: Router = router;
