# src/models/ILoginRequest.ts
@@ -1,0 +1,14 @@
+/**
+ * @module Authentication
+ */
+
+export default interface ILoginRequest {
+    /**
+     * Username of the user performing the login request
+     */
+    username: string,
+    /**
+     * Password of the user performing the login request
+     */
+    password: string
+}
