# src/models/User.ts
@@ -1,28 +1,54 @@
-import {ObjectId} from 'bson';
-import {prop, Typegoose} from "typegoose";
-import MongooseService from "../services/mongoose/MongooseService";
+/**
+ * @module User
+ */
 
+import { ObjectId } from "bson";
+import { prop, Typegoose } from "typegoose";
+import MongooseService from "../services/MongooseService";
+import { Model } from "./index";
+
+/**
+ * Object mapping of a User document
+ */
 export class User extends Typegoose {
 
-    _id: ObjectId | null = null;
+    public _id: ObjectId | string | null = null;
 
+    /**
+     * [Required] The user's alias
+     */
     @prop({ required: true })
-    username: string;
+    public username: string;
 
+    /**
+     * [Required] The user's password
+     */
     @prop({ required: true })
-    password: string;
+    public password: string;
 
+    /**
+     * [Required] The user's first name
+     */
     @prop({ required: true })
-    firstName: string;
+    public firstName: string;
 
+    /**
+     * [Required] The user's last name
+     */
     @prop({ required: true })
-    lastName: string;
+    public lastName: string;
 
-    @prop({ required: true })
-    email: string;
+    /**
+     * [Required] The user's email address
+     */
+    @prop({ required: true, validate: /\S+@\S+\.\S+/ })
+    public email: string;
 }
 
-export const UserModel = new User().getModelForClass(User, {
+/**
+ * Typegoose model for database interaction
+ */
+export const UserModel: Model<User> = new User().getModelForClass(User, {
     existingConnection: MongooseService.getInstance().getClient(),
     schemaOptions: { collection: 'Users', versionKey: false }
 });
